- add basic support for mongoid
- use concerns for routes, deprecate as_routes method
- remove deprecations from 3.4.x (active_scaffold_includes and using @record in helpers)
- fix select of existing record for nested subform
- fix apply constraints to parent (fix update columns on subform on embedded scaffold)
- fix for override form field and subform partials on AS controllers which are parent class for AS controllers, so they are shared by children classes
- fix routes on rails 5.0

= 3.4.39
- fix removing delete link with config.delete.link = false, broken on 3.4.38
- fix position of nested action groups
- fix human conditions with rails 4.2 and json session
- fix search conditions for decimal columns on rails 4.2

= 3.4.38
- ensure add_existing and delete_existing are removed when list is not nested
- add :percentage list_ui, use jquery ui slider, set slider options on column.options[:slider], :value_method (default to column name), :min_method and :max_method to get value, min and max options from record
- fix default required for column with :checkbox form_ui and inclusion validator on rails 3.2
- fix search on habtm column on postgresql
- fix for format_number_value with nil
- add includes for sorting columns only if columns is not displayed, add to includes for postgresql, to outer_joins for others

= 3.4.37
- return valid css class for subgroups, e.g. when name with dot is used for translation scopes
- check permissions for add existing and delete existing, use nested parent record authorized for update nested association column
- TinyMCE bridge integrate better with the tinymce-rails (thanks to @subfusc)
- Remove own country_select helpers and convert into bridge for country_select gem (now it will save country code instead of country name, migrate data or restore old behaviour setting columns[:col].options[:format] = :old)

= 3.4.36
- Fix tableless for rails >= 4.1 for associations with table