@@ -27,19 +27,12 @@ Added to Gemfile
 Run the following commands
 
     bundle install
+    rails g active_scaffold:install
     bundle exec rake db:create
     rails g active_scaffold User name:string
     bundle exec rake db:migrate
 
-Add the following line to app/assets/javascripts/application.js
-
-    //= require active_scaffold
-
-Add the following line to /app/assets/stylesheets/application.css
-
-    *= require active_scaffold
-
-Run the app and visit localhost:3000/users 
+Run the app and visit localhost:3000/users
 
 Configuration
 -------------
